--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+:root{
+    --minHeight: 800px;
+}
 *, *::before, *::after{
     box-sizing: border-box;
 }
@@ -13,13 +15,15 @@ body{
     padding: 0px;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
+    /* min-height: var(--minHeight); */
 }
 
 #Dashboard{
-    height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-columns: minmax(10%,15%) minmax(auto,4fr);
+    grid-template-rows: 1fr minmax(min-content,6fr);
+    height: 100%;
+
 }
 
 header{
@@ -31,14 +35,25 @@ nav{
     grid-column: 1 / 2;
     grid-row: 1 / -1;
     background-color: #0284c7;
+    min-width: 250px;
+    display: grid;
+    grid-template-rows: repeat(auto-fit,minmax(30px,min-content));
+    gap: 50px;
+    padding: 10px;
 }
 main{
     grid-column: 2 / -1;
     grid-row: 2 / -1;
+    display: grid;
+    grid-template-columns: 4fr minmax(375px,1fr);
+    grid-template-rows: repeat(2, minmax(auto,50%));
+    min-width: 1115px;
+    overflow: hidden;
 
 } 
 
 /* Nav Menu */
+
 
 .navButton > svg{
     height: 50px;
@@ -73,12 +88,7 @@ nav svg{
     fill: white;
 }
 
-nav{    
-    display: grid;
-    grid-template-rows: repeat(auto-fit,minmax(30px,min-content));
-    gap: 50px;
-    padding: 10px;
-}
+
 
 
 
@@ -106,23 +116,21 @@ header{
     font-weight: bold;
     padding-left: 20px;
     padding-right: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 15px;
 }
 
 header svg{
     height: 25px;
 }
 .userIcon {
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     background-color: blue;
     background-image: url("./img/usr-img-1.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 70%;
-    position: stretch;
-    
+    background-size: 70%;    
 }
 .searchbar{
     display: grid;
@@ -148,6 +156,12 @@ header svg{
     width: 85%;
     border: none;
     height: 25px;
+    padding: 10px;
+    outline: none;
+}
+
+.searchtext:focus{
+    border: none;
 }
 
 .greetings{
@@ -162,4 +176,196 @@ header svg{
 }
 .greetingsmsg > p:nth-child(2){
     font-size: 28px;
+}
+
+.updateButtons{
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    min-width: 255px;
+}
+
+.updateButtons > button{
+    background-color: #0284c7;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    font-weight: bold;
+    width: max(75px, 80%);
+    height: 30px;
+    transition: background-color .25s ease;
+}
+.updateButtons > button:hover{
+    background-color: #2ba4e0;;
+}
+
+/* Body */
+
+.projectList{
+    grid-column:  1 / 2;
+    grid-row: 1/-1;
+    display: grid;
+    grid-template-rows: 50px minmax(auto,1fr);
+    grid-auto-flow: row dense;
+}
+.projectList > p {
+    padding-left: 20px;
+    padding-bottom: 10px;
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+}
+.cardGroup{
+    display: grid;
+    grid-template-columns: repeat(2, minmax(auto,1fr));
+    grid-template-rows: repeat(3, minmax(auto,1fr));
+    gap: 35px;
+    padding: 0px 20px 20px 20px;
+    /* max-height: 100vh; */
+    /* height: clamp(550px, 100%, 100vh); */
+    
+}
+.cardGroup > .card{
+    background-color: goldenrod;
+    border-radius: 8px;
+    /* height: clamp(150px, 100%, 150px); */
+    min-width: 400px;
+    position: relative;
+}
+.cardGroup > .card > .cardinfo{
+    background-color: white;
+    height: 100%;
+    width: 98%;
+    transform: translateX(2%);
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    display: grid;
+    grid-template-rows: 1.3fr 2.4fr 1.3fr;
+    padding-left: 30px;
+
+}
+.cardinfo > .title{
+    align-self: end;
+    font-weight: bold;
+}
+.cardinfo > .body {
+    font-size: 13px;
+}
+
+
+
+.cardinfo > .icons{
+    display: grid;
+    grid-template-columns: repeat(3, 50px);
+    justify-content: end;
+
+}
+
+.cardinfo > .icons > svg{
+    height: 1.5rem;
+
+}
+
+.announcementListcont,
+.trendingList{
+    padding: 0px 30px 10px 10px;
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    height: min-content;
+    min-height: 100%;
+}
+
+.announcementListcont{
+    grid-column: 2/3;
+    grid-row: 1 / 2;
+}
+.announcementListcont > p {
+    font-weight: bold;
+    grid-row: 1/2;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 10px;
+}
+.announcementListcont > .container{
+    background-color: white;
+    border-radius: 8px;
+    padding: .9rem;
+    font-size: 12px;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-rows: repeat(3, minmax(auto,1fr));
+}
+.announcementListcont > .container .title{
+    font-weight: bold;
+    font-size: 1rem;
+}
+.announcementListcont > .container > .card{
+    position: relative;
+    padding: 5%;
+}
+.announcementListcont > .container > .card:nth-child(1)::after,
+.announcementListcont > .container > .card:nth-child(2)::after{
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 2px;
+    border-radius: 50%;
+    background-color: lightgray;
+}
+
+
+/*Trending*/
+
+.trendingList{
+    grid-column: 2/3;
+    grid-row: 2/3;
+    min-width: 300px;
+}
+
+.trendingList > p{
+    font-weight: bold;
+    grid-row: 1/2;
+    display: flex;
+    align-items: flex-end;
+    padding-bottom: 10px;
+}
+.trendingList > .container {
+    background-color: white;
+    border-radius: 8px;
+    padding: .9rem;
+    font-size: 12px;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-rows: repeat(3, minmax(auto,1fr));
+}
+
+.trendingList > .container .userIcon {
+    --wh: 45px;
+    width: var(--wh);
+    height: var(--wh);
+    border-radius: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 70%;    
+}
+
+.trendingList > .container >.usercard:nth-child(1) >.userIcon{
+    background-image: url("./img/usr-img-2.png");
+    background-color: skyblue;
+}
+.trendingList > .container >.usercard:nth-child(2) >.userIcon{
+    background-image: url("./img/usr-img-3.png");
+    background-color: lightcoral;
+}
+
+.trendingList > .container >.usercard:nth-child(3) >.userIcon{
+    background-image: url("./img/usr-img-4.png");
+    background-color: lightgray;
+}
+.trendingList > .container >.usercard:nth-child(4) >.userIcon{
+    background-image: url("./img/usr-img-5.png");
+    background-color: lightgreen;
 }
